--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en" >
 <head>
@@ -7,31 +8,27 @@
 
 </head>
 <body>
-<!-- partial:index.partial.html -->
+
 <div id="drag-container">
   <div id="spin-container">
 
 
-
-
-
-
-
-    <img src="imgs/80.webp" alt="">
-    <img src="imgs/2.jpg" alt="">
-    <img src="imgs/3.jpg" alt="">
-    <img src="imgs/4.jpg" alt="">
-    <img src="imgs/5.jpg" alt="">
-    <img src="imgs/6.jpg" alt="">
-    <img src="imgs/7.jpg" alt="">
+    
+    <img src="imgs/1.jpeg" alt="">
+    <img src="imgs/2.jpeg" alt="">
+    <img src="imgs/3.jpeg" alt="">
+    <img src="imgs/4.jpeg" alt="">
+    <img src="imgs/5.jpeg" alt="">
+    <img src="imgs/6.jpeg" alt="">
+    <img src="imgs/7.jpeg" alt="">
 
 
     <video controls autoplay="autoplay" loop>
       <source src="imgs/29.mp4" type="video/mp4">
     </video>
 
-    <!-- Text at center of ground -->
-    <p>     You are <mark>Amazing</mark></p>
+
+    <p>You are <mark>Amazing</mark></p>
   </div>
   <div id="ground"></div>
 </div>
@@ -40,7 +37,7 @@
 
 
 <style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
-<!-- partial -->
+
   <script  src="./script.js"></script>
 
 </body>
